# si18n

./: .ghci  README.md  si18n.cabal
src/Text/: Si18n.hs
src/Text/Si18n/: ByteString.hs  Loader.hs  Types.hs
test/: en.csv  test.hs
